--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
     <div class="wrapper d-flex align-items-stretch">
@@ -25,8 +24,6 @@
             </div>
             <div class="p-4">
                 <h1 class="fs-2"><a href="index.html" class="logo">FrotaPública</a></h1>
-
-
                 <ul class="list-unstyled components mb-5">
                     <partial name="_LoginPartial" />
                     <li>
@@ -58,7 +55,7 @@
                     </li>
                     <li>
                         <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                            <i class="fa fa-car mr-3"></i>Veiculos
+                            <i class="fa fa-car mr-3"></i>Veículos
                         </a>
                         <ul class="collapse list-unstyled" id="pageSubmenu">
                             <li>
@@ -67,16 +64,16 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-tag mr-3"></i>Marcas de Veiculos</a>
+                                <a href="#"><i class="fa fa-tag mr-3"></i>Marcas de Veículos</a>
                             </li>
                             <li>
                                 <a class="nav-link" asp-area="" asp-controller="ModeloVeiculo" asp-action="Index">
-                                    <i class="fa fa-car mr-3"></i>Modelos de Veiculo
+                                    <i class="fa fa-car mr-3"></i>Modelos de Veículo
                                 </a>
                             </li>
                             <li>
                                 <a class="nav-link" asp-area="" asp-controller="Veiculo" asp-action="Index">
-                                    <i class=" fa fa-bus mr-3"></i>Adicionar Veiculo
+                                    <i class=" fa fa-bus mr-3"></i>Veículos
                                 </a>
                             </li>
                         </ul>
