--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Create.cshtml
@@ -1,94 +1,151 @@
 @model FrotaWeb.Models.VeiculoViewModel
 
-<h4>VeiculoViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Placa" class="control-label"></label>
-                <input asp-for="Placa" class="form-control" />
-                <span asp-validation-for="Placa" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Chassi" class="control-label"></label>
-                <input asp-for="Chassi" class="form-control" />
-                <span asp-validation-for="Chassi" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Cor" class="control-label"></label>
-                <input asp-for="Cor" class="form-control" />
-                <span asp-validation-for="Cor" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdModeloVeiculo" class="control-label"></label>
-                <input asp-for="IdModeloVeiculo" class="form-control" />
-                <span asp-validation-for="IdModeloVeiculo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdFrota" class="control-label"></label>
-                <input asp-for="IdFrota" class="form-control" />
-                <span asp-validation-for="IdFrota" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdUnidadeAdministrativa" class="control-label"></label>
-                <input asp-for="IdUnidadeAdministrativa" class="form-control" />
-                <span asp-validation-for="IdUnidadeAdministrativa" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Odometro" class="control-label"></label>
-                <input asp-for="Odometro" class="form-control" />
-                <span asp-validation-for="Odometro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Ano" class="control-label"></label>
-                <input asp-for="Ano" class="form-control" />
-                <span asp-validation-for="Ano" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Modelo" class="control-label"></label>
-                <input asp-for="Modelo" class="form-control" />
-                <span asp-validation-for="Modelo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Renavan" class="control-label"></label>
-                <input asp-for="Renavan" class="form-control" />
-                <span asp-validation-for="Renavan" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VencimentoIpva" class="control-label"></label>
-                <input asp-for="VencimentoIpva" class="form-control" />
-                <span asp-validation-for="VencimentoIpva" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Valor" class="control-label"></label>
-                <input asp-for="Valor" class="form-control" />
-                <span asp-validation-for="Valor" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataReferenciaValor" class="control-label"></label>
-                <input asp-for="DataReferenciaValor" class="form-control" />
-                <span asp-validation-for="DataReferenciaValor" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
 
+<main class="container mt-4">
+	<h4 class="page-title fs-3">
+		<i class="fa fa-car mr-3"></i>
+		Veículos
+	</h4>
+	<h1 class="my-text-label fs-3 mt-4 mb-4">Novo Veículo</h1>
+	<form asp-action="Create" class="creator-form fs-5">
+		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Id" class="label">Id</label>
+					<input asp-for="Id" class="form-control" placeholder="IDEx" />
+					<span asp-validation-for="Id" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Placa" class="label">Placa</label>
+					<input asp-for="Placa" class="form-control" placeholder="PlacaEx" />
+					<span asp-validation-for="Placa" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Chassi" class="label">Chassi</label>
+					<input asp-for="Chassi" class="form-control" placeholder="ChassiEx" />
+					<span asp-validation-for="Chassi" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Cor" class="label">Cor</label>
+					<input asp-for="Cor" class="form-control" placeholder="CorEx" />
+					<span asp-validation-for="Cor" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="IdModeloVeiculo" class="label">IdModeloVeiculo</label>
+					<input asp-for="IdModeloVeiculo" class="form-control" placeholder="IdModeloVeiculoEx" />
+					<span asp-validation-for="IdModeloVeiculo" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="IdFrota" class="label">IdFrota</label>
+					<input asp-for="IdFrota" class="form-control" placeholder="IdFrotaEx" />
+					<span asp-validation-for="IdFrota" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="IdUnidadeAdministrativa" class="label">IdUnidadeAdministrativa</label>
+					<input asp-for="IdUnidadeAdministrativa" class="form-control" placeholder="IdUnidadeAdministrativaEx" />
+					<span asp-validation-for="IdUnidadeAdministrativa" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Odometro" class="label">Odometro</label>
+					<input asp-for="Odometro" class="form-control" placeholder="OdometroEx" />
+					<span asp-validation-for="Odometro" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Status" class="label">Status</label>
+					<input asp-for="Status" class="form-control" placeholder="StatusEx" />
+					<span asp-validation-for="Status" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Ano" class="label">Ano</label>
+					<input asp-for="Ano" class="form-control" placeholder="AnoEx" />
+					<span asp-validation-for="Ano" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Modelo" class="label">Modelo</label>
+					<input asp-for="Modelo" class="form-control" placeholder="ModeloEx" />
+					<span asp-validation-for="Modelo" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Renavan" class="label">Renavan</label>
+					<input asp-for="Renavan" class="form-control" placeholder="RenavanEx" />
+					<span asp-validation-for="Renavan" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="VencimentoIpva" class="label">VencimentoIpva</label>
+					<input asp-for="VencimentoIpva" class="form-control campo-data" placeholder="VencimentoIpvaEx" />
+					<span asp-validation-for="VencimentoIpva" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="Valor" class="label">Valor</label>
+					<input asp-for="Valor" class="form-control" placeholder="ValorEx" />
+					<span asp-validation-for="Valor" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container">
+					<label asp-for="DataReferenciaValor" class="label">DataReferenciaValor</label>
+					<input asp-for="DataReferenciaValor" class="form-control campo-data" placeholder="DataReferenciaValorEx" />
+					<span asp-validation-for="DataReferenciaValor" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+		<div class="row mt-4">
+			<div class="col-12 col-md-6 mb-2 mb-md-0">
+				<button type="button" asp-action="Index" class=" my-button btn btn-danger btn-sm w-50 w-md-auto" onclick="location.href = 'Index';">Voltar</button>
+			</div>
+			<div class="col-12 col-md-6 d-flex justify-content-md-end">
+				<button type="submit" value="Create" class="my-button btn btn-success btn-sm w-50 w-md-auto">Confirmar</button>
+			</div>
+		</div>
+	</form>
+</main>
+
+@section Scripts {
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
+}
