--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Create.cshtml
@@ -14,14 +14,17 @@
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="row mb-3">
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-1 itens-center">
 					<label asp-for="IdUnidadeAdministrativa" class="label">Unidade Administrativa</label>
-					<input asp-for="IdUnidadeAdministrativa" class="form-control" placeholder="Administrativo" />
+					<select asp-for="IdUnidadeAdministrativa" class="custom-select">
+						<option value="" disabled selected hidden>Administrativo</option>
+
+					</select>
 					<span asp-validation-for="IdUnidadeAdministrativa" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-2 itens-center">
 					<label asp-for="IdFrota" class="label">Frota</label>
 					<input asp-for="IdFrota" class="form-control" placeholder="Frota" />
 					<span asp-validation-for="IdFrota" class="text-danger"></span>
@@ -30,14 +33,14 @@
 		</div>
 		<div class="row mb-3">
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-1 itens-center">
 					<label asp-for="Placa" class="label">Placa</label>
 					<input asp-for="Placa" class="form-control" placeholder="ABC1D23" />
 					<span asp-validation-for="Placa" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-2 itens-center">
 					<label asp-for="Chassi" class="label">Chassi</label>
 					<input asp-for="Chassi" class="form-control" placeholder="9BWZZZ377VT123456" />
 				</div>
@@ -45,14 +48,14 @@
 		</div>
 		<div class="row mb-3">
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-1 itens-center">
 					<label asp-for="Valor" class="label">Valor do Veículo</label>
 					<input asp-for="Valor" class="form-control" placeholder="80000" />
 					<span asp-validation-for="Valor" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-2 itens-center">
 					<label asp-for="IdModeloVeiculo" class="label">Modelo Veículo</label>
 					<input asp-for="IdModeloVeiculo" class="form-control" placeholder="Modelo Veículo" />
 					<span asp-validation-for="IdModeloVeiculo" class="text-danger"></span>
@@ -61,14 +64,14 @@
 		</div>
 		<div class="row mb-3">
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-1 itens-center">
 					<label asp-for="DataReferenciaValor" class="label">Data Referência (Valor)</label>
 					<input asp-for="DataReferenciaValor" class="form-control campo-data" placeholder="" />
 					<span asp-validation-for="DataReferenciaValor" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-2 itens-center">
 					<label asp-for="Cor" class="label">Cor</label>
 					<input asp-for="Cor" class="form-control" placeholder="Preto" />
 					<span asp-validation-for="Cor" class="text-danger"></span>
@@ -77,14 +80,14 @@
 		</div>
 		<div class="row mb-3">
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-1 itens-center">
 					<label asp-for="Odometro" class="label">Odômetro</label>
 					<input asp-for="Odometro" class="form-control" placeholder="26000" />
 					<span asp-validation-for="Odometro" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-2 itens-center">
 					<label asp-for="Status" class="label">Status</label>
 					<input asp-for="Status" class="form-control" placeholder="Em Uso" />
 					<span asp-validation-for="Status" class="text-danger"></span>
@@ -93,14 +96,14 @@
 		</div>
 		<div class="row mb-3">
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-1 itens-center">
 					<label asp-for="Ano" class="label">Ano</label>
 					<input asp-for="Ano" class="form-control" placeholder="AnoEx" />
 					<span asp-validation-for="Ano" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-2 itens-center">
 					<label asp-for="Modelo" class="label">Modelo</label>
 					<input asp-for="Modelo" class="form-control" placeholder="2024" />
 					<span asp-validation-for="Modelo" class="text-danger"></span>
@@ -109,23 +112,23 @@
 		</div>
 		<div class="row mb-3">
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-1 itens-center">
 					<label asp-for="Renavan" class="label">Renavan</label>
 					<input asp-for="Renavan" class="form-control" placeholder="12345678901" />
 				</div>
 			</div>
 			<div class="col-md-6">
-				<div class="type-container">
+				<div class="type-container offset-md-2 itens-center">
 					<label asp-for="VencimentoIpva" class="label">Vencimento Ipva</label>
 					<input asp-for="VencimentoIpva" class="form-control campo-data" placeholder="" />
 				</div>
 			</div>
 		</div>
 		<div class="row mt-4">
-			<div class="col-12 col-md-6 mb-2 mb-md-0">
-				<button type="button" asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto" onclick="location.href = 'Index';">Voltar</button>
+			<div class="col-12 col-md-6 mb-2 mb-md-0 itens-center">
+				<a asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto">Voltar</a>
 			</div>
-			<div class="col-12 col-md-6 d-flex justify-content-md-end">
+			<div class="col-12 col-md-6 d-flex justify-content-md-end itens-center">
 				<button type="submit" value="Create" class="my-button btn btn-success btn-sm w-50 w-md-auto">Confirmar</button>
 			</div>
 		</div>
@@ -138,12 +141,13 @@
 			const camposDate = document.getElementsByClassName("campo-data");
 			Array.from(camposDate).forEach(campo => {
 				function atualizarPlaceholderColor() {
-					campo.style.color = campo.value ? '#000000' : 'var(--grey)';
+					campo.style.color = campo.value ? '#000000' : "var(--grey)";
 				}
 				atualizarPlaceholderColor();
-				campo.addEventListener('input', atualizarPlaceholderColor);
+				campo.addEventListener("input", atualizarPlaceholderColor);
 			});
 		});
+
 	</script>
 	@{
 		await Html.RenderPartialAsync("_ValidationScriptsPartial");
